# ts_py_auth

docs/: 03_deployment.md
fastapi_backend/: requirements.txt
fastapi_backend/app/: __init__.py  config.py  database.py  main.py  models.py  oauth.py  schemas.py  users.py
main_project_backup/docs/: 01_architecture.md  02_erd_diagram.md
main_project_backup/fastapi_backend/app/: config.py
main_project_backup/nextjs_frontend/: package-lock.json
main_project_backup/nextjs_frontend/src/app/: layout.tsx
main_project_backup/nextjs_frontend/src/app/auth/github/callback/: page.tsx
main_project_backup/nextjs_frontend/src/app/dashboard/: page.tsx
main_project_backup/otchet/: otchet2.md
nextjs_frontend/: next.config.mjs  package.json
nextjs_frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs_frontend/src/app/auth/github/callback/: page.tsx
nextjs_frontend/src/app/auth/google/callback/: page.tsx
nextjs_frontend/src/app/register/: page.tsx
nextjs_frontend/src/lib/: api.ts
pm_02/: .gitignore  README.md
pm_02/fastapi_backend/: .env.example  pyproject.toml
pm_02/fastapi_backend/app/: config.py  database.py  main.py  models.py
pm_02/nextjs_frontend/src/app/: layout.tsx  page.tsx
pm_02/nextjs_frontend/src/app/register/: page.tsx
pm_02/nextjs_frontend/src/lib/: api.ts
pm_02/otchet/: otchet.md
primer-otchet/: primer.txt
